; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-ptm/src/extr_ifxmips_ptm_vdsl.c_get_tx_desc.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-ptm/src/extr_ifxmips_ptm_vdsl.c_get_tx_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.ptm_itf* }
%struct.ptm_itf = type { i64 }
%struct.TYPE_4__ = type { i64 }

@g_ptm_priv_data = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@CPU_TO_WAN_TX_DESC_BASE = common dso_local global %struct.TYPE_4__* null, align 8
@CPU_TO_WAN_TX_DESC_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @get_tx_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_tx_desc(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ptm_itf*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  store i32 -1, i32* %5, align 4
  %7 = load %struct.ptm_itf*, %struct.ptm_itf** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_ptm_priv_data, i32 0, i32 0), align 8
  %8 = getelementptr inbounds %struct.ptm_itf, %struct.ptm_itf* %7, i64 0
  store %struct.ptm_itf* %8, %struct.ptm_itf** %6, align 8
  %9 = load i32*, i32** %4, align 8
  store i32 1, i32* %9, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @CPU_TO_WAN_TX_DESC_BASE, align 8
  %11 = load %struct.ptm_itf*, %struct.ptm_itf** %6, align 8
  %12 = getelementptr inbounds %struct.ptm_itf, %struct.ptm_itf* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %45

18:                                               ; preds = %2
  %19 = load %struct.ptm_itf*, %struct.ptm_itf** %6, align 8
  %20 = getelementptr inbounds %struct.ptm_itf, %struct.ptm_itf* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %5, align 4
  %23 = load %struct.ptm_itf*, %struct.ptm_itf** %6, align 8
  %24 = getelementptr inbounds %struct.ptm_itf, %struct.ptm_itf* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %24, align 8
  %27 = load i32, i32* @CPU_TO_WAN_TX_DESC_NUM, align 4
  %28 = sext i32 %27 to i64
  %29 = icmp eq i64 %26, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %18
  %31 = load %struct.ptm_itf*, %struct.ptm_itf** %6, align 8
  %32 = getelementptr inbounds %struct.ptm_itf, %struct.ptm_itf* %31, i32 0, i32 0
  store i64 0, i64* %32, align 8
  br label %33

33:                                               ; preds = %30, %18
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** @CPU_TO_WAN_TX_DESC_BASE, align 8
  %35 = load %struct.ptm_itf*, %struct.ptm_itf** %6, align 8
  %36 = getelementptr inbounds %struct.ptm_itf, %struct.ptm_itf* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp eq i64 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %33
  %43 = load i32*, i32** %4, align 8
  store i32 0, i32* %43, align 4
  br label %44

44:                                               ; preds = %42, %33
  br label %45

45:                                               ; preds = %44, %2
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
